[tool.poetry]
name = "workshop1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
dlt = {extras = ["duckdb"], version = "^0.4.2"}
requests = "^2.31.0"
numpy = "^1.26.4"
pandas = "^2.2.0"
pyarrow = "^15.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
